# codenexus

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API.md  API.zh-CN.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONFIGURATION.zh-CN.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT.zh-CN.md  DEPLOYMENT_STATUS.md  DEVELOPMENT.md  DEVELOPMENT.zh-CN.md  FINAL_SUMMARY.md  FRONTEND_INTEGRATION_PLAN.md  FUTURE_PHASES_PLAN.md  GETTING-STARTED.md  GETTING-STARTED.zh-CN.md  LICENSE  Makefile  PHASE2_COMPLETE.md  PHASE5_SUMMARY.md  PHASE8_FRONTEND_INTEGRATION_COMPLETE.md  PHASE_9_COMPLETION_REPORT.md  PROJECT_PROGRESS.md  PROJECT_STATUS.md  README.md  README.zh-CN.md  REMAINING_WORK_PLAN.md  SECURITY.md  TESTING.md  TESTING.zh-CN.md  TODO.md  TYPESCRIPT_FIXES.md  (+11 more)
api/: Cargo.toml  Cargo.toml.bak  Dockerfile  docker-entrypoint.sh
api-infra/: Cargo.toml
api-infra/src/: config.rs  error.rs  lib.rs  metrics.rs  state.rs
api-infra/src/middleware/: authz.rs  tenant.rs
api-infra/src/testkit/: database.rs  fixtures.rs  mod.rs  redis.rs
api-infra/src/traits/: class_repo.rs  community_repo.rs  contest_repo.rs  leaderboard_repo.rs  mod.rs  notification_service.rs  problem_repo.rs  search_repo.rs  submission_repo.rs  submission_service.rs  user_repo.rs
api-infra/src/websocket/: server.rs
api/migrations/: 002_create_campuses.sql  003_create_users.sql  003_update_user_login.sql  005_create_problems.sql  007_create_submissions.sql  008_create_test_case_results.sql  011_create_assignments.sql  025_create_legacy_uoj_compat.sql  026_align_runtime_schema_for_legacy_uoj.sql  026_create_contest_leaderboard_snapshots.sql  027_create_user_competitive_stats.sql  028_align_submissions_runtime_legacy_fields.sql  2026-02-21-002-discussions-runtime.sql  2026-02-22-003-notifications.sql  2026-03-27-001-update-user-login-backfill.sql
api/migrations_archive/: 002_sample_data.sql
api/src/: error.rs  lib.rs  main.rs  main.rs.bak  release_gate_tests.rs  worker_heartbeat.rs
api/src/auth/: jwt_service.rs  mod.rs  password.rs  routes.rs
api/src/blog/: mod.rs  models.rs  routes.rs  service.rs
api/src/classes/: models.rs  routes.rs  service.rs
api/src/contests/: models.rs  routes.rs  service.rs
api/src/db/: mod.rs
api/src/discussions/: mod.rs  models.rs  routes.rs  service.rs
api/src/judge_monitor/: routes.rs  service.rs
api/src/leaderboard/: mod.rs  models.rs  routes.rs  service.rs  service.rs.bak
api/src/messages/: mod.rs  routes.rs
api/src/middleware/: auth.rs  authz.rs  mod.rs  permission.rs  request_id.rs  tenant.rs
api/src/notifications/: mod.rs  models.rs  routes.rs  service.rs
api/src/plagiarism/: routes.rs
api/src/problems/: mod.rs  mod.rs.bak  mod.rs.bak2  mod.rs.bak3  mod.rs.bak4  models.rs  routes.rs  test_cases.rs
api/src/rbac/: mod.rs
api/src/redis/: mod.rs
api/src/search/: mod.rs  models.rs  routes.rs  service.rs
api/src/submissions/: mod.rs  models.rs  queue.rs  routes.rs  service.rs
api/src/users/: mod.rs  models.rs  routes.rs  service.rs
api/src/websocket/: handler.rs  message.rs  mod.rs  server.rs
api/tests/: docker_test.rs
api/tests/common/: mod.rs
api/tests/handlers/: contests_test.rs  mod.rs  users_test.rs
backend/: .dockerignore  Cargo.toml
backend/.cargo/: audit.toml
backend/api/: .env.example  Cargo.toml  Dockerfile
backend/api-infra/: Cargo.toml
backend/api-infra/src/: config.rs  error.rs  lib.rs  metrics.rs  rbac.rs  state.rs
backend/api/migrations/: 000_create_update_updated_at_function.sql  001_create_organizations.sql  004_create_user_roles.sql  009_create_classes.sql  012_create_contests.sql  013_create_contest_problems.sql  014_create_contest_submissions.sql  015_create_discussions.sql  017_create_direct_messages.sql  018_create_plagiarism_scan.sql  020_create_contest_participants.sql  021_add_user_code_and_status.sql  022_create_blog_tables.sql  023_create_judge_language_settings.sql  024_add_class_codes_and_assignment_publish.sql  027_add_is_upsolving_to_contest_submissions.sql  028_drop_redundant_leaderboard_index.sql  029_fix_user_roles_unique_null_campus.sql  030_reorg_to_gradeadmin.sql  031_create_grades_and_add_grade_id.sql  034_fix_notifications_fk_types.sql  035_create_feature_gateway.sql  040_add_score_to_submissions.sql  041_add_analysis_advanced_structural_features.sql  043_seed_llm_feature_flags.sql  044_create_token_revocations.sql  045_add_test_case_result_payload.sql  046_add_problem_correct_answer_visibility.sql  047_add_problem_tags.sql  048_add_analysis_job_type_context.sql  049_add_password_needs_reset.sql  050_restore_community_runtime_schema.sql  051_repair_serial_sequences.sql  052_add_contest_problem_category.sql  053_create_learning_roadmaps.sql  2026-02-21-001-discussions.sql  2026-02-22-002-search-indexes.sql  2026-02-22-003-notifications.sql  2026-05-02-001-add-password-needs-reset.sql  2026-06-13-001-analysis-job-active-unique.sql  (+2 more)
backend/api/migrations_archive/: 004_update_sample_users.sql  (+1 more)
backend/api/src/: lib.rs  (+4 more)
backend/domain-analysis/: Cargo.toml
backend/domain-classes/: Cargo.toml
backend/domain-community/: Cargo.toml
backend/domain-contests/: Cargo.toml
backend/domain-imex/: Cargo.toml
backend/domain-leaderboard/: Cargo.toml
backend/domain-problems/: Cargo.toml
backend/domain-search/: Cargo.toml
backend/domain-submissions/: Cargo.toml
backend/domain-users/: Cargo.toml
backend/feature-gateway/: Cargo.toml  Dockerfile
backend/judge-worker/: Cargo.toml  Dockerfile
backend/llm-worker/: Cargo.toml  Dockerfile
backend/migration-tool/: Cargo.toml
backend/monitor-server/: Cargo.toml  README.md
backend/shared/: Cargo.toml  PHASE-SUMMARY-TEMPLATE.md  README.md  ROADMAP.md  policy-matrix.md
domain-leaderboard/: Cargo.toml
domain-leaderboard/src/: lib.rs  models.rs  service.rs
domain-leaderboard/tests/: integration.rs
judge-worker/: Cargo.toml  Dockerfile
judge-worker/src/: circuit_breaker.rs  heartbeat.rs  lib.rs  main.rs
judge-worker/tests/: queue_consumer.test.rs  task6_memory_test.rs
(+1711 files in other folders)
