[workspace]
members = [
    "backend/api",
    "backend/api-infra",
    "backend/domain-analysis",
    "backend/domain-classes",
    "backend/domain-community",
    "backend/domain-contests",
    "backend/domain-imex",
    "backend/domain-leaderboard",
    "backend/domain-problems",
    "backend/domain-search",
    "backend/domain-submissions",
    "backend/domain-users",
    "backend/feature-gateway",
    "backend/judge-worker",
    "backend/llm-worker",
    "backend/migration-tool",
    "backend/shared",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
