[package]
name = "api-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
tracing = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio-test = "0.4"
