[package]
name = "api-infra"
version = "0.1.0"
edition = "2021"

[features]
testkit = ["testcontainers", "testcontainers-modules"]

[dependencies]
shared = { path = "../shared" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
anyhow = "1.0"
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
deadpool-redis = { version = "0.22", features = ["serde"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Optional deps for testkit feature
testcontainers = { version = "0.23", optional = true }
testcontainers-modules = { version = "0.11", features = ["postgres"], optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio-test = "0.4"
