[package]
name = "domain-leaderboard"
version = "0.1.0"
edition = "2021"

[dependencies]
api-infra = { path = "../api-infra" }
shared = { path = "../shared" }
axum = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
async-trait = "0.1"
tracing = { workspace = true }
deadpool-redis = { version = "0.22", features = ["serde"] }

[dev-dependencies]
api-infra = { path = "../api-infra", features = ["testkit"] }
tokio = { workspace = true, features = ["full"] }
