[package]
name = "judge-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
nix = { version = "0.29", features = ["fs", "user", "process", "hostname"] }
libc = "0.2"
shared = { path = "../shared" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { workspace = true }
serde_json = { workspace = true }
