[package]
name = "judge-worker"
version = "0.1.0"
edition = "2021"
autotests = false

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
nix = { version = "0.29", features = ["fs", "user", "process", "hostname"] }
libc = "0.2"
shared = { path = "../shared" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4"
libseccomp-sys = "0.2"
