[package]
name = "domain-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { workspace = true }
api-infra = { path = "../api-infra" }
chrono = { version = "0.4", features = ["serde"] }
deadpool-redis = { version = "0.22", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared" }
sqlx = { version = "0.8", default-features = false, features = ["derive", "macros", "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = { workspace = true }
