[package]
name = "domain-imex"
version = "0.1.0"
edition = "2021"

[dependencies]
api-infra = { path = "../api-infra" }
shared = { path = "../shared" }
domain-problems = { path = "../domain-problems" }
domain-users = { path = "../domain-users" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["derive", "macros", "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = { workspace = true }
zip = "8.5"
csv = "1.4"
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
bcrypt = "0.16"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
