[package]
name = "domain-users"
version = "0.1.0"
edition = "2021"

[dependencies]
api-infra = { path = "../api-infra" }
shared = { path = "../shared" }
axum = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["derive", "macros", "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
bcrypt = "0.16"
md-5 = "0.11"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
rand = "0.8"

[dev-dependencies]
api-infra = { path = "../api-infra", features = ["testkit"] }
tokio = { workspace = true, features = ["full"] }
