[package]
name = "feature-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["derive", "macros", "runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
anyhow = "1"

[dev-dependencies]
tower = "0.5"

[[bin]]
name = "feature-gateway"
path = "src/main.rs"
