[package]
name = "llm-worker"
version = "0.1.0"
edition = "2021"
autotests = false

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "time"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
