[package]
name = "migration-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["derive", "macros", "runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { workspace = true }
serde_json = "1.0"
regex = "1.11"
md-5 = "0.11"
bcrypt = "0.16"

[dev-dependencies]
tempfile = "3"
sqlx = { version = "0.8", default-features = false, features = ["derive", "macros", "runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
